--- a/frontend/src/app/main/main.component.html
+++ b/frontend/src/app/main/main.component.html
@@ -1,23 +1,30 @@
 <div class="container">
     <div class="messages mat-elevation-z5">
         <div class="messages-header">
-            <img  src="assets/bot.jpeg" alt="bot_img">
-            <h2>Бот</h2>
+            <!-- <img  src="assets/bot.jpeg" alt="bot_img"> -->
+            <h2>Ассистент</h2>
         </div>
         <hr>
-         <div class="input-chat">
-            <ul class="chatbox">
-                <li class="chat-incoming chat">
-                    <p>Здравствуйте! Чем могу помочь ?</p>
-                </li>
-                <li class="chat-incoming chat">
-                    <p>Здравствуйте! Чем могу помочь ?</p>
-                </li>
-            </ul>
+            <div class="chatbox" #chatbox>
+                <div *ngFor="let item of messages" 
+                [ngClass]="{
+                    'chat-message-bot': item.type === 'bot',
+                    'chat-message-human': item.type === 'human'
+                }">
+                    <div class="details">
+                        <p>{{item.text}}</p>
+                    </div>                    
+                </div>                        
+
+                <div class="chat-typing" *ngIf="istyping">
+                    <p>печатает...</p>               
+                </div>
+            </div>
+            <hr>
             <div class="chat-input">
-                <textarea [(ngModel)]="prompt" placeholder="Enter a message..." (keydown.enter)="sendMessage()"></textarea>
-                <button id="sendBTN" (click)="sendMessage()">Send</button>
-            </div>   
-         </div>
+                <textarea [(ngModel)]="prompt" placeholder="Введите" (keydown.enter)="sendMessage()"></textarea>
+                <!-- <button id="sendBTN" (click)="sendMessage()">Send</button> -->
+            </div>
+        
     </div>
 </div>
