--- a/frontend/src/app/main/main.component.html
+++ b/frontend/src/app/main/main.component.html
@@ -21,8 +21,22 @@
                 </div>
             </div>
             <hr>
-            <div class="chat-input">
-                <textarea [(ngModel)]="prompt" placeholder="Введите" (keydown.enter)="sendMessage()"></textarea>
+            <div class="wrapper">
+                <input type="text" [(ngModel)]="prompt" placeholder="Введите" />
+
+                <button (click)="sendMessage()" [ngStyle]="{background: isPlaying ? 'white' : (prompt ? 'white' : '#686868')}">
+                    <svg *ngIf="isPlaying" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <rect x="6" y="6" width="12" height="12" rx="2"></rect>
+                    </svg>
+                    <svg *ngIf="!isPlaying" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M5 12l14 0"></path>
+                        <path d="M13 18l6 -6"></path>
+                        <path d="M13 6l6 6"></path>
+                    </svg>
+                </button>
+
             </div>
     </div>
 </div>
