--- a/frontend/src/app/main/main.component.scss
+++ b/frontend/src/app/main/main.component.scss
@@ -5,6 +5,10 @@ $gray_light: #686868;
 $orange: #ff5533;
 $font-family: "Roboto Mono", monospace;
 
+* {
+  box-sizing: border-box;
+}
+
 .container {
     display: flex;
     justify-content: center;
@@ -37,8 +41,6 @@ $font-family: "Roboto Mono", monospace;
     color: $orange;
   }
 }
-
-///////
 
 .chatbox {
     
@@ -101,7 +103,6 @@ $font-family: "Roboto Mono", monospace;
       0%, 100% { opacity: 1; }
       50% { opacity: 0.5; }
     }
-
   }
    
   .chat-outgoing p {
@@ -110,56 +111,6 @@ $font-family: "Roboto Mono", monospace;
     color: #fff;
   }
 
-.chat-input {
-  padding: 10px;
-  display: flex;
-  justify-content:center;
-
-//////
-        /* Стилизация полосы прокрутки */
-        textarea::-webkit-scrollbar {
-          width: 8px; /* Ширина полосы прокрутки */
-      }
-
-      textarea::-webkit-scrollbar-track {
-          background: $black; /* Цвет фона полосы прокрутки */
-          border-radius: 10px; /* Скругление углов полосы прокрутки */
-      }
-
-      textarea::-webkit-scrollbar-thumb {
-          background: $gray_light; /* Цвет бегунка полосы прокрутки */
-          border-radius: 18px; /* Скругление углов бегунка */
-      }
-
-      textarea::-webkit-scrollbar-thumb:hover {
-          background: $orange; /* Цвет бегунка при наведении */
-      }
-
-
-
-
-/////
-  textarea {  
-    width: 90%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 7px;
-    resize: none;
-    outline: none;
-    overflow-y: scroll;
-    background-color: $gray;
-    font-size: 16px;
-    color: $white;
-    height: 71px;
-    font-family: $font-family;
-  }
-
-  textarea:hover {
-    border: 1px solid $orange;
-    cursor: pointer;
-  }
-}
-
 hr {
   display: block;
   height: 1px;
@@ -167,11 +118,38 @@ hr {
   border-top: 1px solid $orange;
 }
 
+.wrapper {
+  width: 400px;
+  max-width: 100%;
+  position: relative;
+  
+  input {
+    color: $white;
+    font-size: 16px;
+    background: $gray;
+    border: 1px solid $gray_light;
+    border-radius: 50px;
+    padding: 10px 16px;
+    width: 100%;
+    outline: none;
+  }
 
-///////
-/// 
-/// 
-/// <!DOCTYPE html>
+  button {
+    background: $gray_light;
+    border-radius: 50px;
+    aspect-ratio: 1;
+    height: 80%; 
+    position: absolute;
+    top: 10%;
+    right: 5px;
+    border: none;
+    cursor: pointer;
+  }
 
+  button:hover {
+    opacity: 0.8;
+  }
 
+  
+}
 
