--- a/frontend/src/app/toolbar/toolbar.component.scss
+++ b/frontend/src/app/toolbar/toolbar.component.scss
@@ -32,17 +32,17 @@ $gray: #262a2f;
     margin: 0 16px;
   }
 
-  .toolbar #twitter-logo {
+  .toolbar #hack-logo {
     height: 40px;
     margin: 0 8px;
   }
 
-  .toolbar #youtube-logo {
+  .toolbar #github-logo {
     height: 40px;
     margin: 0 16px;
   }
 
-  .toolbar #twitter-logo:hover,
-  .toolbar #youtube-logo:hover {
+  .toolbar #hack-logo:hover,
+  .toolbar #github-logo:hover {
     opacity: 0.8;
   }
