--- a/frontend/src/app/main/main.component.scss
+++ b/frontend/src/app/main/main.component.scss
@@ -11,8 +11,9 @@ $font-family: "Roboto Mono", monospace;
 
 .container {
   display: flex;
-  justify-content: center;
   height: calc(100vh - 10px);
+  flex-direction: column;
+  align-items: center;
 }
 
 .messages {
@@ -130,6 +131,10 @@ hr {
   max-width: 100%;
   position: relative;
 
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+
   input {
     color: $white;
     font-size: 16px;
@@ -151,10 +156,12 @@ hr {
     right: 5px;
     border: none;
     cursor: pointer;
-  }
+    transition: background-color 0.3s ease;
 
-  button:hover {
-    opacity: 0.8;
+    &:hover {
+      opacity: 0.8;
+    }
+    
   }
 
 
